--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "2.1.0",
   "main": "index.js",
   "description": "Databases course work template",
-  "repository": "https://github.com/boldak/dis-edu",
-  "author": "Andrey Boldak <boldak.andrey@gmail.com>",
+  "repository": "https://github.com/AndrijShchegel/open-data-management-system",
+  "author": "Andrii Shchegel <andrii.shchegel@gmail.com>",
   "license": "ECL 2.0",
   "scripts": {
     "docs:dev": "npx vuepress dev docs",
